@@ -1,12 +1,6 @@
-<!-- Automagically generated by the ToDo program on 2005-04-09 -->
+<!-- Automagically generated by the ToDo program on 04/09/05, 12:15 -->
 <todo version="0.1.18">
     <title>
         Todo list for herdstat
     </title>
-    <note priority="veryhigh" time="1113027075">
-        Modify fileobject_T to use path_T.
-        <note priority="medium" time="1113027185">
-            Also modify dir_T to be a vector of path_T's.
-        </note>
-    </note>
 </todo>
