@@ -2,6 +2,8 @@ ChangeLog for herdstat
 
 2005-04-09 Aaron Walker <ka0ttic@gentoo.org>
 
+	* lib/string.cc, lib/string.hh: Added string class which inherits from
+	std::string.  For now just provides the split() member function.
 	* lib/file.cc, lib/file.hh: Added generic directory container from
 	which we derive two types (dirobject_T formerly known as dir_T and
 	dir_T which just hold's the filenames not whole file objects. Also
